--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script type="text/javascript" src="../lib/d3.v5.min.js"></script>
-<script type="text/javascript" src="../lib/d3-dsv.min.js"></script>
-<script type="text/javascript" src="../lib/d3-tip.min.js"></script>
-<script type="text/javascript" src="../lib/d3-legend.min.js"></script>
-<script type="text/javascript" src="../lib/topojson.v2.min.js"></script>
-<script type="text/javascript" src="../lib/d3-geo-projection.v2.min.js"></script>
+<script type="text/javascript" src="lib/d3.v5.min.js"></script>
+<script type="text/javascript" src="lib/d3-dsv.min.js"></script>
+<script type="text/javascript" src="lib/d3-tip.min.js"></script>
+<script type="text/javascript" src="lib/d3-legend.min.js"></script>
+<script type="text/javascript" src="lib/topojson.v2.min.js"></script>
+<script type="text/javascript" src="lib/d3-geo-projection.v2.min.js"></script>
 
 
 
